--- a/webclient/app/sass/jquery-ui-1.7.2.custom-accordion.sass
+++ b/webclient/app/sass/jquery-ui-1.7.2.custom-accordion.sass
@@ -5,8 +5,8 @@
 
 /*Accordion
  *----------------------------------
-@import "colors"
-@import "borders"
+@import _colors
+@import _borders
 
 .ui-accordion
   .ui-accordion-header, .ui-state-default
@@ -42,7 +42,7 @@
   .ui-state-active, .ui-widget-content .ui-state-active, .ui-state-default, .ui-widget-content .ui-state-default
     background: none
     border: none
-    color: $c_text
+    color: !c_text
   legend.ui-state-active, .ui-widget-content legend.ui-state-active, legend.ui-state-default, .ui-widget-content legend.ui-state-default
     font-weight: bold
     font-size: 1em
@@ -53,6 +53,6 @@
     position: inherit
     padding-right: 5px
   .ui-corner-all
-    @include no-round-corners
+    +no-round-corners
 
 /* Reset regular jquery-ui styles inside accordion
