--- a/webclient/app/sass/jquery-ui-1.7.2.custom-tabs.sass
+++ b/webclient/app/sass/jquery-ui-1.7.2.custom-tabs.sass
@@ -1,22 +1,23 @@
 /*
  ** Source: jQuery tab CSS Framework
-@import "colors"
-@import "borders"
+@import _colors
+@import _borders
 
+!base_color = !c_fieldset
 .fieldset-group
   &.ui-corner-all
-    @include no-round-corners
+    +no-round-corners
     border: none
   &.ui-tabs
     margin: 1em
     padding: 0px
-    color: $c_text
+    color: !c_text
     font: 1em "lsLucida Grande", "Trebuchet MS", Verdana, sans-serif
   fieldset.ui-tabs-panel
-    @include round-corners
-    @include border-outset($c_fieldset)
+    +round-corners
+    +border-outset
     margin: 0px
-    background-color: $c_fieldset
+    background-color: !c_fieldset
   .ui-widget-header
     border: none
     background: transparent
@@ -27,18 +28,18 @@
     border: 0 none transparent
   .ui-tabs-nav
     .ui-state-default, .ui-state-active
-      @include round-corners-top
-      @include border-outset($c_fieldset)
+      +round-corners-top
+      +border-outset
       position: relative
       bottom: -1
-      color: mix($c_fieldset, $c_text, 50%)
+      color: mix(!c_fieldset, !c_text, 50%)
     .ui-state-active
-      color: $c_text
+      color: !c_text
       border-bottom-style: none
   &.ui-widget-content
     .ui-tabs-nav
       .ui-state-default, .ui-state-active
-        background-color: $c_fieldset
+        background-color: !c_fieldset
         background-image: none
         font-weight: bold
     background: transparent
