--- a/webclient/app/sass/style.sass
+++ b/webclient/app/sass/style.sass
@@ -19,35 +19,36 @@
 
 /* == Used Colours ===========================================================
 
-@import "colors"
-@import "borders"
+@import _colors.sass
+@import _borders.sass
 
 /* == Basic setup  ========================================================
 
-@mixin button
-  background: $c_button url(images/button-bg-rollover-gradient.png) repeat-x scroll center top
-  color: $c_text
+!border_outset_base_color = !c_button_border
+=button
+  +round-corners
+  background: !c_button url(images/button-bg-rollover-gradient.png) repeat-x scroll center top
+  color: !c_text
   font-size: 13px
   font-family: Trebuchet MS, Helvetica, sans-serif
   font-weight: bold
-  @include border-outset($c_button_border)
+  +border-outset
   -moz-background-inline-policy: continuous
   -moz-background-origin: padding
   cursor: pointer
   padding: 2px 10px
   text-decoration: none
-  text-shadow: 0 -1px 0 $c_text_shadow
+  text-shadow: 0 -1px 0 !c_text_shadow
   width: auto
   vertical-align: baseline
-  @include round-corners
   &:hover
-    background-color: mix($c_black, $c_button, 30%)
+    background-color: mix(!c_black, !c_button, 30%)
     background-position: 0 -22px
-    color: $c_inverse_text
-    text-shadow: 0 -1px 0 $c_hower_text_shadow
+    color: !c_inverse_text
+    text-shadow: 0 -1px 0 !c_hower_text_shadow
   &[disabled]
-    color: $c_disabled_text
-    text-shadow: 0 -1px 0 $c_disabled_text
+    color: !c_disabled_text
+    text-shadow: 0 -1px 0 !c_disabled_text
     &:hover
       background-position: 0 0px
 /* html,
@@ -55,9 +56,9 @@
 /* unnecessary property, causes inheritance
 
 body
-  background-color: $c_background
+  background-color: !c_background
   /* BG Grey: #fcfcfc is taken see example above
-  color: $c_text
+  color: !c_text
   font-family: Trebuchet MS, Helvetica, sans-serif
   width: 100%
   height: 99%
@@ -82,19 +83,19 @@ h4, h5
   font-size: 1em
 
 a
-  color: $c_anchor
+  color: !c_anchor
   font-weight: bold
   text-decoration: none
   font-size: 11px
   /*   border-bottom:1px dotted #8e908b;
-  border-bottom: 1px dotted $c_anchor_underline
+  border-bottom: 1px dotted !c_anchor_underline
   &:hover
-    color: $c_anchor
+    color: !c_anchor
     font-size: 11px
     /*   text-decoration: underline;
-    border-bottom: 2px solid $c_anchor_underline
+    border-bottom: 2px solid !c_anchor_underline
   &.action-link
-    color: $c_anchor
+    color: !c_anchor
     /*  color:#8e908b;
     font-size: 13px
     font-weight: bold
@@ -102,47 +103,47 @@ a
     /*  border-bottom:2px solid #666;
     &:hover
       /*  color:#1e90ff;
-      color: $c_anchor
+      color: !c_anchor
       font-size: 13px
       /*  color:#a0a0a0;
       font-weight: bold
       /*  border-bottom:3px solid #1C94C4;
       /*  border-bottom:2px dotted #D84630;
-      border-bottom: 2px solid $c_anchor_underline
+      border-bottom: 2px solid !c_anchor_underline
       /*  Studio: #8e908b
       /*  text-shadow:0px 0px 8px rgba(160,160,160,1), 0px 0px 15px rgba(28,148,169,0.5), 0px 0px 20px rgba(120,120,120,0.2);
   &.button
-    @include button
+    +button
     /* CSS Hack for IE8
     padding: 2px 10px\9
-    color: $c_text \9 !important
+    color: !c_text \9 !important
     /* end of hack
 
 /* CSS properties for all input elements
 
 input
   &.button, &[type="submit"], &[type="button"]
-    @include button
+    +button
 
 /* CSS Hack for FF
 html a.button:only-of-type
   padding: 3px 10px
 
 input
-  border: 1px solid $c_button_border
+  border: 1px solid !c_button_border
   padding: 3px
-  color: $c_text
+  color: !c_text
   font-size: 1em
-  background: $c_inverse_text
+  background: !c_inverse_text
 
 select
-  border: 1px solid $c_button_border
+  border: 1px solid !c_button_border
   padding: 2px
-  color: $c_text
+  color: !c_text
   font-size: 1em
-  background: $c_inverse_text
+  background: !c_inverse_text
   &:focus
-    border: 1px solid $c_focused_input
+    border: 1px solid !c_focused_input
 
 /* select for available Updates in software module with image before text
 /* TODO find the solution for IE and Chrome, the images are not rendered before text
@@ -157,13 +158,13 @@ select
 input
   &[type="text"],&[type="password"]
     width: 32em
-    border-color: $c_input_border
+    border-color: !c_input_border
     &:focus
       width: 32em
-      border: 1px solid $c_focused_input
-      color: $c_text
+      border: 1px solid !c_focused_input
+      color: !c_text
   &[disabled]
-    background-color: $c_button
+    background-color: !c_button
 
 img
   border: none
@@ -175,13 +176,13 @@ ul li
 
 #header
   width: 100%
-  background: $c_header url('images/bg-head-gradient.png') repeat-x scroll 0 0
-  border-bottom: 1px solid mix($c_black, $c_header, 40%)
+  background: !c_header url('images/bg-head-gradient.png') repeat-x scroll 0 0
+  border-bottom: 1px solid mix(!c_black, !c_header, 40%)
   height: 50px
   text-align: center
   position: relative
   *
-    color: $c_text
+    color: !c_text
   h1
     margin: 0
     padding-top: 13px
@@ -197,7 +198,7 @@ ul li
 #content
   h3
     font-size: 1.7em
-    color: $c_text
+    color: !c_text
     margin-bottom: 0.5em
     clear: both
   h2
@@ -222,7 +223,7 @@ ul li
   padding: 0 10px 0
   width: 97%
   padding: 2em 0
-  color: mix($c_text, $c_background, 50%)
+  color: mix(!c_text, !c_background, 50%)
 
 #login-wrapper
   position: absolute
@@ -245,16 +246,16 @@ ul li
 #login-dialogue
   width: 23em
   /*min-height: 17em; FIXME not working in IE6 | not working anywhere, 
-   *breaks host selection screen --bubli
-  background: $c_button
+  /*breaks host selection screen --bubli
+  background: !c_button
   margin: 10px auto
   overflow: hidden
-  color: $c_text
+  color: !c_text
   -moz-border-radius: 5px
   -webkit-border-radius: 5px
-  -moz-box-shadow: 0 1px 7px $c_button_border
-  -webkit-box-shadow: 0 1px 7px $c_button_border
-  box-shadow: 0 1px 7px $c_button_border
+  -moz-box-shadow: 0 1px 7px !c_button_border
+  -webkit-box-shadow: 0 1px 7px !c_button_border
+  box-shadow: 0 1px 7px !c_button_border
 
 #login_button
   float: right
@@ -262,7 +263,7 @@ ul li
 #login-dialogue
   form
     display: block
-    background: $c_inverse_text
+    background: !c_inverse_text
     padding: 15px
     margin: 7px
     overflow: hidden
@@ -271,7 +272,7 @@ ul li
       width: 97%
   h2
     margin: 0 !important
-    color: $c_text
+    color: !c_text
   label
     display: block
     margin: 0 0 0.2em
@@ -300,10 +301,11 @@ ul li
 #status_patches, #status_status
   margin: 10px
 
+!border_inset_base_color = !c_background
 .plugin-content
-  background-color: $c_inverse_text
-  @include border-inset($c_background)
-  @include round-corners
+  background-color: !c_inverse_text
+  +border-inset
+  +round-corners
   float: left
   clear: both
   width: 100%
@@ -354,22 +356,23 @@ ul li
     padding: 1em 5px 0
     text-align: center
     &:hover
-      border-color: $c_button_border
-      background: $c_background
+      border-color: !c_button_border
+      background: !c_background
       text-decoration: none
-      @include round-corners
+      +round-corners
   div
     div, a
       text-align: center
 
 /* == Form Styles =======================================================
 
+!border_outset_base_color = !c_fieldset
 fieldset
-  background-color: $c_fieldset
+  background-color: !c_fieldset
   border: none
   margin: 1em
-  @include border-outset($c_fieldset)
-  @include round-corners
+  +border-outset
+  +round-corners
   p
     clear: both
     margin-bottom: 0.5em
@@ -384,10 +387,6 @@ fieldset
     margin: 0.2em 0.5em
   &.small-labels label
     width: 8em
-
-/*fieldset select {
- *  background-color: #fff;
- *}
 
 legend
   font-weight: bold
@@ -409,21 +408,21 @@ input.error
 /* is not possible now (for WebYaST-SP1-GMC) because of higher effort as assumed
 
 /*label.error {
- *  float:none;
- *  display:inline;
- *  font-weight:bold;
- *  color:#990000;
- *  padding-top:2px;
- *  padding-left:.5em;
- *  vertical-align:middle; 
- *}
- *
- *label.valid { 
- *  background: url('/images/checked.gif') no-repeat;
- *  padding:0px 0px 0px 18px;
- *  vertical-align:middle; 
- *  margin-left:5px;
- *}
+/*  float:none;
+/*  display:inline;
+/*  font-weight:bold;
+/*  color:#990000;
+/*  padding-top:2px;
+/*  padding-left:.5em;
+/*  vertical-align:middle; 
+/*}
+/*
+/*label.valid { 
+/*  background: url('/images/checked.gif') no-repeat;
+/*  padding:0px 0px 0px 18px;
+/*  vertical-align:middle; 
+/*  margin-left:5px;
+/*}
 
 label.error
   float: left
@@ -454,10 +453,10 @@ fieldset fieldset
 
 /* ==Status Icons ==
 /* -- HTML Example --
- *<div class="status-icon ok"></div>
- *<div class="status-icon warning"></div>
- *<div class="status-icon error"></div>
- *<div class="status-icon optional"></div>
+/*<div class="status-icon ok"></div>
+/*<div class="status-icon warning"></div>
+/*<div class="status-icon error"></div>
+/*<div class="status-icon optional"></div>
 
 .status-icon
   display: block
@@ -593,8 +592,8 @@ tr
 
 #password-strength
   /*     uncomment this if you want
-   *   a border around passwd strength bar
-   * border: 1px solid #aaa;
+  /*   a border around passwd strength bar
+  /* border: 1px solid #aaa;
   font-size: 0.8em
   height: 5ex
   padding: 0.3em
@@ -608,10 +607,11 @@ tr
 
 /* List accordion styles
 
+!border_outset_base_color = !c_fieldset
 .list-fieldset
-  @include border-outset($c_fieldset)
-  background-color: $c_fieldset
-  @include round-corners
+  +border-outset
+  background-color: !c_fieldset
+  +round-corners
   padding: 0 0.5em
   margin: 0.5em 1em 0.5em
 
@@ -626,13 +626,13 @@ tr
 
 p.missing-permissions
   margin-left: 1em
-  color: $c_error
+  color: !c_error
 
 div#browserWarning
-  background-color: $c_inverse_text
+  background-color: !c_inverse_text
   width: 100%
-  border-top: solid 1px $c_error
-  border-bottom: solid 1px $c_error
+  border-top: solid 1px !c_error
+  border-bottom: solid 1px !c_error
   text-align: center
   padding: 5px 0px 5px 0px
 
