webclient: fix forgotten sass syntax

--- a/webclient/app/sass/jquery-ui-1.7.2.custom-tabs.sass
+++ b/webclient/app/sass/jquery-ui-1.7.2.custom-tabs.sass
@@ -3,7 +3,7 @@
 @import _colors
 @import _borders
 
-!base_color = !c_fieldset
+!border_outset_base_color = !c_fieldset
 .fieldset-group
   &.ui-corner-all
     +no-round-corners
