webclient: restyle the list of icons in control-panel, remove .list-row class

--- a/webclient/app/sass/style.sass
+++ b/webclient/app/sass/style.sass
@@ -313,43 +313,11 @@ ul li
 
 /* == Lists and Tables ====================================================
 
-.list-row
-  clear: left
-  overflow: hidden
-  padding: 1em 0
-  border-bottom: 1px dotted #eee
-  h3
-    margin-top: 0
-    text-indent: 10px
-  div
-    div, a
-      float: left
-      margin: 0 25px 0 0
-      width: 75px
-      text-align: center
-  &.overview
-    border-color: transparent
-    > div
-      /* get child of *.overview
-      overflow: hidden
-      padding: 1em 0
-      border-bottom: 1px dotted #eee
-      /* FIXME Just a quick workaround
-  div a
-    display: block
-    padding: 1em 5px 0
-    margin: 0 5px
-    border: 2px solid transparent
-    height: 8em
-    &:hover
-      border-color: #999
-      background: #eee
-      text-decoration: none
-      -moz-border-radius: 5px
-      -webkit-border-radius: 5px
-  .controlpanel-shortcut
+div.overview
+  padding: 5px
+  a.controlpanel-shortcut
     float: left
-    margin: 0 5px
+    margin: 5px
     border: 2px solid transparent
     width: 75px
     height: 8em
@@ -360,9 +328,6 @@ ul li
       background: !c_background
       text-decoration: none
       +round-corners
-  div
-    div, a
-      text-align: center
 
 /* == Form Styles =======================================================
 
