--- a/plugins/firewall/app/views/firewall/index.rhtml
+++ b/plugins/firewall/app/views/firewall/index.rhtml
@@ -22,7 +22,7 @@
 <% disabled = !@permissions[:write] %>
 
 <% content_for :head do %>
-  <%= javascript_include_tag :defaults %>
+<!--   <%= javascript_include_tag :defaults %> -->
   <% javascript_tag do -%>
   $(document).ready(function(){
 
