--- a/plugins/network/app/views/network/index.html.erb
+++ b/plugins/network/app/views/network/index.html.erb
@@ -24,7 +24,9 @@
 %>
 
 <% content_for :head do %>
-   <%= javascript_include_tag :defaults %>
+<!--    <%= javascript_include_tag :defaults %> -->
+<!-- added to webyast-base-min.js -->
+<!-- 	<%= javascript_include_tag "validation.js" %> -->
 
    <% javascript_tag do -%>
       // Slide and focus the field with error if accordion/tab section  is closed 
@@ -99,7 +101,6 @@
 		}
 	</script>
 
-	<%= javascript_include_tag "validation.js" %>
 	<script type="text/javascript">
 	$(document).ready(function() {
 	  validateIPv4("ip");
