--- a/plugins/roles/app/views/roles/manage_roles.rhtml
+++ b/plugins/roles/app/views/roles/manage_roles.rhtml
@@ -22,7 +22,7 @@
 %>
 
 <% content_for :head do %>
-  <%= javascript_include_tag :defaults %>
+<!--   <%= javascript_include_tag :defaults %> -->
 
   <% javascript_tag do %>
       function showNew() {
