--- a/plugins/services/app/views/services/index.rhtml
+++ b/plugins/services/app/views/services/index.rhtml
@@ -18,8 +18,13 @@
 # To contact Novell about this file by physical or electronic mail,
 # you may find current contact information at www.novell.com
 -->
+
 <%= javascript_include_tag :defaults %>
-<%= javascript_include_tag "jquery.quicksearch.js" %>
+
+<% if RAILS_ENV == 'development' %>
+  <%= javascript_include_tag "jquery.quicksearch.js" %>
+<% end %>
+
 <% javascript_tag do %>
 $(document).ready(function() {
 
