--- a/plugins/software/app/views/repositories/add.html.erb
+++ b/plugins/software/app/views/repositories/add.html.erb
@@ -19,7 +19,7 @@
 # you may find current contact information at www.novell.com
 -->
 <% content_for :head do %>
-  <%= javascript_include_tag :defaults %>
+<!--   <%= javascript_include_tag :defaults %> -->
 
   <style type="text/css">
 	 /* TODO temporary solution please see the comment in style.css*/
