--- a/plugins/status/app/views/status/edit.html.erb
+++ b/plugins/status/app/views/status/edit.html.erb
@@ -22,7 +22,7 @@
 <% write_disabled = !@permissions[:writelimits] %>
 
 <% content_for :head do %>
-   <%= javascript_include_tag :defaults %>
+   <!--<%= javascript_include_tag :defaults %>-->
 
    <% javascript_tag do -%>
       // Sets a focus to a fieldID, switching to its tab first.
