--- a/plugins/time/app/views/time/index.rhtml
+++ b/plugins/time/app/views/time/index.rhtml
@@ -20,7 +20,6 @@
 -->
 
 <% disabled = !@permissions[:write] %>
-
 <% content_for :head do %>
   <%= javascript_include_tag :defaults %>
   <style type="text/css">
@@ -46,7 +45,10 @@
     });
   <% end -%>
 
-  <%= javascript_include_tag "validation.js" %>
+  <% if RAILS_ENV == 'development' %>
+    <%= javascript_include_tag "validation.js" %>
+  <% end %>
+  
   <script type="text/javascript">
 	 $(document).ready(function() {
 		validateDomainName("ntp_server");
