--- a/plugins/software/app/views/repositories/index.html.erb
+++ b/plugins/software/app/views/repositories/index.html.erb
@@ -26,7 +26,7 @@
     <%= javascript_include_tag "jquery.quicksearch.js"-%>
   <% end %>
  
-<!--   <%= javascript_include_tag :defaults %> -->
+  <%= javascript_include_tag :defaults %>
 <!--   <%= javascript_include_tag "jquery.quicksearch.js" %> -->
 
   <style type="text/css">
