--- a/plugins/time/app/views/time/index.rhtml
+++ b/plugins/time/app/views/time/index.rhtml
@@ -20,6 +20,7 @@
 -->
 
 <% disabled = !@permissions[:write] %>
+<% ntp_available = Ntp.available? %>
 <% content_for :head do %>
   <%= javascript_include_tag :defaults %>
   <style type="text/css">
@@ -170,26 +171,26 @@
     <p>
       <input type="radio" name="timeconfig" value="manual" onclick="enable();" id="timeconfig_manual"     
         <%= "disabled=\"disabled\"" if disabled%>
-        <%= "checked=\"checked\"" unless Ntp.available? %>/>
+        <%= "checked=\"checked\"" unless ntp_available %>/>
       <%=_("Manually configure time")%>
     </p>
     <% #TODO for tooltip _("Manual time configuration table, where user selects data and time for target machine")
        %>
     <p>
       <label for="date_date"><%= _("Date") %></label>
-      <%= text_field "date","date", :disabled=> "true", :value => @stime.date %>
+      <%= text_field "date","date", :disabled=> ntp_available ? true :false , :value => @stime.date %>
     </p>
     <p>
       <label for="currenttime"><%= _("Time") %></label>
-      <%= text_field_tag "currenttime", @stime.time, :disabled=> "true"%>
+      <%= text_field_tag "currenttime", @stime.time, :disabled=> ntp_available ? true :false %>
     </p>
     <p>
       <input id="ntp_sync" type="radio" name="timeconfig" value="ntp_sync" onclick="disable();"
-        <%=  "disabled=\"disabled\"" if disabled || !Ntp.available? %>
-        <%=  "checked=\"checked\"" if Ntp.available? %> />
+        <%=  "disabled=\"disabled\"" if disabled || ntp_available %>
+        <%=  "checked=\"checked\"" if ntp_available %> />
       <%=_("Synchronize via Network Time Protocol (NTP)")%>
     </p>
-    <% if Ntp.available? %>
+    <% if ntp_available %>
     <p>
       <label for="ntp_server"><%= _("NTP server") %></label>
         <%= options = {}
