- added missing javascript for password validation: digitalspaghetti.password.js

--- a/webclient/app/views/layouts/main.rhtml
+++ b/webclient/app/views/layouts/main.rhtml
@@ -47,6 +47,7 @@
 				"jquery.ui.tabs", #FIXME looks like already include in ui.core
 				"yast.widgets",
 				"yast.helpers",
+				"digitalspaghetti.password.js",
 				"/javascripts/browser_fixes" %>
 
     <%= yield :before_script %>
