- added new detection for switching between minified and source javascripts to webclient base module and users/groups module - removed unnecessary minified javascripts

--- a/plugins/users/app/views/groups/new.html.erb
+++ b/plugins/users/app/views/groups/new.html.erb
@@ -31,8 +31,8 @@
 -->
 
  <!-- don't forget to change to production -->
-  <% if RAILS_ENV == 'production' %>
-    <%= javascript_include_tag "min/users-group-min.js"-%>
+  <% if JSMIN == true %>
+    <%= javascript_include_tag "users-min.js"-%>
   <% else %>
     <%= javascript_include_tag "users.js" %>
     <%= javascript_include_tag "select_dialog.js" %>
