- fix for broken status layout at start up - minor style chages - removed temporary style_in_progress.sass file

--- a/webclient/app/sass/_colors.sass
+++ b/webclient/app/sass/_colors.sass
@@ -32,7 +32,8 @@
 !c_anchor = !c_text
 !c_shortcut_background = !c_background
 !c_inverse_text = !c_white
-!c_disabled_text = mix(!c_gray, !c_text, 50%)
+/*!c_disabled_text = mix(!c_gray, !c_text, 50%)
+!c_disabled_text = #ccc
 !c_button_border = mix(!c_black, !c_button, 50%)
 !c_hower_text_shadow = mix(!c_black, !c_button, 50%)
 !c_text_shadow = mix(!c_white, !c_button, 50%)
