--- a/webclient/public/stylesheets/new_inputs.css
+++ b/webclient/public/stylesheets/new_inputs.css
@@ -69,6 +69,7 @@ input[type="submit"]:active, input[type="button"]:active, button[type="submit"]:
   background: url("../images/gradientx60.png") repeat-x #2966FF; 
 }
 
+intput[disabled] { background-color:#eee; }
 input[type="submit"][disabled], input[type="button"][disabled], button[type="submit"][disabled], a.button[disabled] {
   color: #aaa;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.1), 0 1px 0 rgba(255, 255, 255, 0.9);
